--- a/Python 2019-2020Z Polat Su.ipynb
+++ b/Python 2019-2020Z Polat Su.ipynb
@@ -27,7 +27,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bottle v0.11.6 server starting up (using WSGIRefServer())...\n",
+      "Listening on http://localhost:8049/\n",
+      "Hit Ctrl-C to quit.\n",
+      "\n",
+      "127.0.0.1 - - [01/Jan/2020 22:04:57] \"GET / HTTP/1.1\" 200 747\n",
+      "127.0.0.1 - - [01/Jan/2020 22:04:57] \"GET /style.css HTTP/1.1\" 304 0\n",
+      "127.0.0.1 - - [01/Jan/2020 22:06:52] \"POST /login HTTP/1.1\" 200 765\n",
+      "127.0.0.1 - - [01/Jan/2020 22:07:16] \"POST /login HTTP/1.1\" 200 924\n",
+      "127.0.0.1 - - [01/Jan/2020 22:07:40] \"GET /logout HTTP/1.1\" 200 765\n",
+      "127.0.0.1 - - [01/Jan/2020 22:07:48] \"POST /login HTTP/1.1\" 200 924\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "import time\n",
@@ -45,17 +62,18 @@
     "                        name TEXT NOT NULL,\n",
     "                        surname TEXT NOT NULL,\n",
     "                        zip_code INTEGER,\n",
-    "                        pay_grade INTEGER,\n",
+    "                        pay_grade char(5),\n",
     "                        email text NOT NULL UNIQUE, \n",
     "                        job_start_date datetime,\n",
-    "                        password char(20) NOT NULL);'''\n",
+    "                        password char(20) NOT NULL,\n",
+    "                        personnel_type char(1) NOT NULL);'''\n",
     "\n",
     "c.execute(query)\n",
     "\n",
     "# Create table - AdministrativePersonnel\n",
     "query='''CREATE TABLE IF NOT EXISTS AdministrativePersonnel (\n",
     "                        apID INTEGER PRIMARY KEY,\n",
-    "                        private_health_insurance BOOLEAN CHECK (private_health_insurance IN (0,1),\n",
+    "                        private_health_insurance INTEGER,\n",
     "                        expense INTEGER);'''\n",
     "c.execute(query)\n",
     "\n",
@@ -63,7 +81,7 @@
     "# Create table - FieldPersonnel\n",
     "query='''CREATE TABLE IF NOT EXISTS FieldPersonnel (\n",
     "                        fpID INTEGER PRIMARY KEY,\n",
-    "                        shift_type BOOLEAN CHECK (private_health_insurance IN (0,1),\n",
+    "                        shift_type INTEGER,\n",
     "                        yearly_bonus INTEGER);'''\n",
     "c.execute(query)\n",
     "\n",
@@ -77,7 +95,7 @@
     "\n",
     "# Create table - Address\n",
     "query='''CREATE TABLE IF NOT EXISTS Address (\n",
-    "                        zip_code_address INTEGER PRIMARY KEY,\n",
+    "                        zip_code_address char(5) PRIMARY KEY,\n",
     "                        street char(40),\n",
     "                        building char(40),\n",
     "                        city char(40));'''\n",
@@ -88,21 +106,15 @@
     "#Fill tables with data\n",
     "#Add an admin account\n",
     "\n",
-    "query = '''INSERT INTO Personnel(pID,name,surname,email,password) \n",
-    "            SELECT 000, 'Global','Admin','admin','admin' \n",
+    "query = '''INSERT INTO Personnel(pID,name,surname,email,password,personnel_type) \n",
+    "            SELECT 000, 'Global','Admin','admin','admin','a' \n",
     "            WHERE NOT EXISTS(SELECT 1 FROM Personnel WHERE pID = 000)'''\n",
     "\n",
     "c.execute(query)\n",
     "\n",
     "\n",
     "#Fill Address Table\n",
-    "\n",
-    "insert into myTable (col1,col2) \n",
-    "     select aValue as col1,anotherValue as col2 \n",
-    "     union select moreValue,evenMoreValue \n",
-    "     union...\n",
-    "\n",
-    "\n",
+    "\"\"\"\n",
     "query = '''INSERT INTO Address(zip_code_address,street,building,city) \n",
     "            SELECT 31313 as zip_code_address,'Hinesville' as street,'82' as building,'GA' as city \n",
     "            UNION select 96815,'Honolulu','13','HI'\n",
@@ -125,8 +137,17 @@
     "            UNION select 48640,'Midland','76','MI'\n",
     "            UNION select 10952,'Monsey','345','NY' '''\n",
     "            \n",
+    "c.execute(query)\n",
+    "\"\"\"\n",
+    "#Get Zip Codes\n",
+    "query = '''select zip_code_address from Address'''\n",
     "\n",
     "c.execute(query)\n",
+    "zipCodes = c.fetchall()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "conn.commit()\n",
     "\n",
@@ -182,7 +203,7 @@
     "    \n",
     "@route('/logout')\n",
     "@route('/logout/')\n",
-    "def index(name=''):\n",
+    "def logout(name=''):\n",
     "    global isLoggedIn\n",
     "    isLoggedIn = 0\n",
     "    global loginResult\n",
@@ -192,19 +213,107 @@
     "    \n",
     "@route('/home')\n",
     "@route('/home/')\n",
-    "def index(name=''):\n",
+    "def home(name=''):\n",
     "    if (isLoggedIn == 1):\n",
     "        return template('home',name=loginResult[0][2])\n",
     "    else:\n",
     "        return template('index',msg=\"You must log in.\")\n",
     "    \n",
+    "    \n",
     "@route('/profile')\n",
     "@route('/profile/')\n",
-    "def index(name=''):\n",
+    "def profile(name=''):\n",
     "    if (isLoggedIn == 1):\n",
     "        return template('profile',account=loginResult[0])\n",
     "    else:\n",
     "        return template('index',msg=\"You must log in.\")\n",
+    "    \n",
+    "    \n",
+    "@route('/addPersonnel')\n",
+    "@route('/addPersonnel/', method='GET')\n",
+    "def addpersonnel(name=''):\n",
+    "    if (isLoggedIn == 1):\n",
+    "        return template('addPersonnel', zipList=zipCodes, msg=\"\")\n",
+    "    else:\n",
+    "        return template('index',msg=\"You must log in.\")\n",
+    "\n",
+    "    \n",
+    "@route('/addPersonnelPost')\n",
+    "@route('/addPersonnelPost/')\n",
+    "@route('/addPersonnelPost', method='POST')\n",
+    "def addpersonnelpost():\n",
+    "    #Establishing a new connection\n",
+    "    conn = create_connection()\n",
+    "    cur = conn.cursor()\n",
+    "    query = '''select count(*) from Personnel'''\n",
+    "    cur.execute(query)\n",
+    "    pid=cur.fetchall()[0][0]\n",
+    "    \n",
+    "    #Getting data from Add Personnel TPL\n",
+    "    name = request.forms.get('name', default=False)\n",
+    "    surname = request.forms.get('surname', default=False)\n",
+    "    email = request.forms.get('email', default=False)\n",
+    "    zipCode = request.forms.get('zipCode', default=False)\n",
+    "    payGrade = request.forms.get('payGrade', default=False)\n",
+    "    jobStartDate = request.forms.get('jobStartDate', default=False)\n",
+    "    password = request.forms.get('password', default=False)\n",
+    "    personnelType = request.forms.get('personnelType', default=False)\n",
+    "    \n",
+    "    query = '''select count(*) from Personnel where email=?'''\n",
+    "    cur.execute(query)\n",
+    "    selectEmail=cur.fetchall()[0][0]\n",
+    "    \n",
+    "    if(selectEmail==email):\n",
+    "        return template('addPersonnel', zipList=zipCodes, msg=\"A record exists under this e-mail\")\n",
+    "    \n",
+    "    if personnelType in (\"a\",\"e\",\"f\"):\n",
+    "        query = '''INSERT INTO Personnel\n",
+    "                    VALUES (?,?,?,?,?,?,?,?,?)'''\n",
+    "        cur.execute(query,(pid,name,surname,email,zipCode,payGrade,jobStartDate,password,personnelType))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "        if(personnelType==\"a\"):\n",
+    "            expense = request.forms.get('expense', default=False)\n",
+    "            privateHealthInsurance = request.forms.get('privateHealthInsurance', default=False)\n",
+    "            \n",
+    "            query = '''INSERT INTO AdministrativePersonnel\n",
+    "                        VALUES (?,?,?)'''\n",
+    "            cur.execute(query,(pid,privateHealthInsurance,expense))\n",
+    "            conn.commit()\n",
+    "            conn.close()\n",
+    "            return template('home',name=loginResult[0][2]) \n",
+    "        \n",
+    "        \n",
+    "        if(personnelType==\"e\"):\n",
+    "            premiumRatio = request.forms.get('premiumRatio', default=False)\n",
+    "\n",
+    "            query = '''INSERT INTO ExecutivePersonnel\n",
+    "                        VALUES (?,?,?)'''\n",
+    "            cur.execute(query,(pid,premiumRatio))\n",
+    "            conn.commit()\n",
+    "            conn.close()\n",
+    "            return template('home',name=loginResult[0][2])\n",
+    "        \n",
+    "        \n",
+    "        if(personnelType==\"f\"):\n",
+    "            yearlyBonus = request.forms.get('yearlyBonus', default=False)\n",
+    "            shiftType = request.forms.get('shiftType', default=False)\n",
+    "\n",
+    "            query = '''INSERT INTO FieldPersonnel\n",
+    "                        VALUES (?,?,?)'''\n",
+    "            cur.execute(query,(pid,shiftType,yearlyBonus))\n",
+    "            conn.commit()\n",
+    "            conn.close()\n",
+    "            return template('home',name=loginResult[0][2])\n",
+    "        \n",
+    "        \n",
+    "    else:\n",
+    "        conn.commit()\n",
+    "        conn.close()\n",
+    "        return template('index',msg=\"An error happened on adding new personnel.\")\n",
+    "    \n",
+    "    \n",
     "   \n",
     "   \n",
     "\n",
