--- a/Python 2019-2020Z Polat Su.ipynb
+++ b/Python 2019-2020Z Polat Su.ipynb
@@ -36,12 +36,29 @@
       "Listening on http://localhost:8049/\n",
       "Hit Ctrl-C to quit.\n",
       "\n",
-      "127.0.0.1 - - [01/Jan/2020 22:04:57] \"GET / HTTP/1.1\" 200 747\n",
-      "127.0.0.1 - - [01/Jan/2020 22:04:57] \"GET /style.css HTTP/1.1\" 304 0\n",
-      "127.0.0.1 - - [01/Jan/2020 22:06:52] \"POST /login HTTP/1.1\" 200 765\n",
-      "127.0.0.1 - - [01/Jan/2020 22:07:16] \"POST /login HTTP/1.1\" 200 924\n",
-      "127.0.0.1 - - [01/Jan/2020 22:07:40] \"GET /logout HTTP/1.1\" 200 765\n",
-      "127.0.0.1 - - [01/Jan/2020 22:07:48] \"POST /login HTTP/1.1\" 200 924\n"
+      "127.0.0.1 - - [03/Jan/2020 20:53:44] \"GET / HTTP/1.1\" 200 747\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 764, in _handle\n",
+      "    return route.call(**args)\n",
+      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 1575, in wrapper\n",
+      "    rv = callback(*a, **ka)\n",
+      "  File \"<ipython-input-1-6a493b1a9631>\", line 152, in login\n",
+      "    return template('home',loggedUser=loginResult, msg='')\n",
+      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 3117, in template\n",
+      "    return TEMPLATES[tplid].render(kwargs)\n",
+      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 3090, in render\n",
+      "    self.execute(stdout, kwargs)\n",
+      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 3078, in execute\n",
+      "    eval(self.co, env)\n",
+      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 185, in __get__\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 2977, in co\n",
+      "    return compile(self.code, self.filename or '<string>', 'exec')\n",
+      "  File \"C:\\Users\\ozgrp\\Desktop\\UW\\Python\\PROJECT\\GitHub\\Python-Bottle-Simple-Registration\\home.tpl\", line 41\n",
+      "    for i in topSalaries\n",
+      "                       ^\n",
+      "SyntaxError: invalid syntax\n",
+      "127.0.0.1 - - [03/Jan/2020 20:53:47] \"POST /login HTTP/1.1\" 500 746\n"
      ]
     }
    ],
@@ -61,9 +78,9 @@
     "                        pID INTEGER PRIMARY KEY,\n",
     "                        name TEXT NOT NULL,\n",
     "                        surname TEXT NOT NULL,\n",
+    "                        email text NOT NULL UNIQUE,\n",
     "                        zip_code INTEGER,\n",
-    "                        pay_grade char(5),\n",
-    "                        email text NOT NULL UNIQUE, \n",
+    "                        salary INTEGER, \n",
     "                        job_start_date datetime,\n",
     "                        password char(20) NOT NULL,\n",
     "                        personnel_type char(1) NOT NULL);'''\n",
@@ -139,6 +156,7 @@
     "            \n",
     "c.execute(query)\n",
     "\"\"\"\n",
+    "\n",
     "#Get Zip Codes\n",
     "query = '''select zip_code_address from Address'''\n",
     "\n",
@@ -196,7 +214,7 @@
     "    if (len(loginResult) > 0):\n",
     "        global isLoggedIn\n",
     "        isLoggedIn = 1\n",
-    "        return template('home',name=loginResult[0][2])\n",
+    "        return template('home',loggedUser=loginResult, msg='')\n",
     "    else:\n",
     "        return template('index',msg=\"Wrong credentials.\")\n",
     "\n",
@@ -215,7 +233,17 @@
     "@route('/home/')\n",
     "def home(name=''):\n",
     "    if (isLoggedIn == 1):\n",
-    "        return template('home',name=loginResult[0][2])\n",
+    "        if(loggedUser[0][8]==\"e\"):\n",
+    "            \n",
+    "            #Getting top salaries by grouping SQL\n",
+    "            conn = create_connection()\n",
+    "            cur = conn.cursor()\n",
+    "            query = '''select name,surname, personnel_type, max(salary) as maxSalary from Personnel group by personnel_type;'''\n",
+    "            topSalariesQ=cur.fetchall()[0]\n",
+    "            \n",
+    "            \n",
+    "            return template('home',loggedUser=loginResult, topSalaries=topSalariesQ, msg='You have top level privilidges including to be able to see statistics below.')\n",
+    "        return template('home',loggedUser=loginResult, msg='')\n",
     "    else:\n",
     "        return template('index',msg=\"You must log in.\")\n",
     "    \n",
@@ -254,22 +282,22 @@
     "    surname = request.forms.get('surname', default=False)\n",
     "    email = request.forms.get('email', default=False)\n",
     "    zipCode = request.forms.get('zipCode', default=False)\n",
-    "    payGrade = request.forms.get('payGrade', default=False)\n",
+    "    salary = request.forms.get('salary', default=False)\n",
     "    jobStartDate = request.forms.get('jobStartDate', default=False)\n",
     "    password = request.forms.get('password', default=False)\n",
     "    personnelType = request.forms.get('personnelType', default=False)\n",
     "    \n",
     "    query = '''select count(*) from Personnel where email=?'''\n",
-    "    cur.execute(query)\n",
+    "    cur.execute(query,(email,))\n",
     "    selectEmail=cur.fetchall()[0][0]\n",
     "    \n",
-    "    if(selectEmail==email):\n",
+    "    if(selectEmail==1):\n",
     "        return template('addPersonnel', zipList=zipCodes, msg=\"A record exists under this e-mail\")\n",
     "    \n",
     "    if personnelType in (\"a\",\"e\",\"f\"):\n",
     "        query = '''INSERT INTO Personnel\n",
     "                    VALUES (?,?,?,?,?,?,?,?,?)'''\n",
-    "        cur.execute(query,(pid,name,surname,email,zipCode,payGrade,jobStartDate,password,personnelType))\n",
+    "        cur.execute(query,(pid,name,surname,email,zipCode,salary,jobStartDate,password,personnelType))\n",
     "    \n",
     "    \n",
     "    \n",
@@ -282,18 +310,18 @@
     "            cur.execute(query,(pid,privateHealthInsurance,expense))\n",
     "            conn.commit()\n",
     "            conn.close()\n",
-    "            return template('home',name=loginResult[0][2]) \n",
+    "            return template('home',loggedUser=loginResult, msg=\"Personnel added successfully.\") \n",
     "        \n",
     "        \n",
     "        if(personnelType==\"e\"):\n",
     "            premiumRatio = request.forms.get('premiumRatio', default=False)\n",
     "\n",
     "            query = '''INSERT INTO ExecutivePersonnel\n",
-    "                        VALUES (?,?,?)'''\n",
+    "                        VALUES (?,?)'''\n",
     "            cur.execute(query,(pid,premiumRatio))\n",
     "            conn.commit()\n",
     "            conn.close()\n",
-    "            return template('home',name=loginResult[0][2])\n",
+    "            return template('home',loggedUser=loginResult, msg=\"Personnel added successfully.\")\n",
     "        \n",
     "        \n",
     "        if(personnelType==\"f\"):\n",
@@ -305,7 +333,7 @@
     "            cur.execute(query,(pid,shiftType,yearlyBonus))\n",
     "            conn.commit()\n",
     "            conn.close()\n",
-    "            return template('home',name=loginResult[0][2])\n",
+    "            return template('home',loggedUser=loginResult, msg=\"Personnel added successfully.\")\n",
     "        \n",
     "        \n",
     "    else:\n",
