Home page improved with statistical data under admin priviledges.

--- a/Python 2019-2020Z Polat Su.ipynb
+++ b/Python 2019-2020Z Polat Su.ipynb
@@ -36,29 +36,24 @@
       "Listening on http://localhost:8049/\n",
       "Hit Ctrl-C to quit.\n",
       "\n",
-      "127.0.0.1 - - [03/Jan/2020 20:53:44] \"GET / HTTP/1.1\" 200 747\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 764, in _handle\n",
-      "    return route.call(**args)\n",
-      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 1575, in wrapper\n",
-      "    rv = callback(*a, **ka)\n",
-      "  File \"<ipython-input-1-6a493b1a9631>\", line 152, in login\n",
-      "    return template('home',loggedUser=loginResult, msg='')\n",
-      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 3117, in template\n",
-      "    return TEMPLATES[tplid].render(kwargs)\n",
-      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 3090, in render\n",
-      "    self.execute(stdout, kwargs)\n",
-      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 3078, in execute\n",
-      "    eval(self.co, env)\n",
-      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 185, in __get__\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"C:\\Users\\ozgrp\\Anaconda3\\lib\\site-packages\\bottle.py\", line 2977, in co\n",
-      "    return compile(self.code, self.filename or '<string>', 'exec')\n",
-      "  File \"C:\\Users\\ozgrp\\Desktop\\UW\\Python\\PROJECT\\GitHub\\Python-Bottle-Simple-Registration\\home.tpl\", line 41\n",
-      "    for i in topSalaries\n",
-      "                       ^\n",
-      "SyntaxError: invalid syntax\n",
-      "127.0.0.1 - - [03/Jan/2020 20:53:47] \"POST /login HTTP/1.1\" 500 746\n"
+      "127.0.0.1 - - [05/Jan/2020 00:35:00] \"GET / HTTP/1.1\" 200 747\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('ozlem', 'polat', 'a', 0)\n",
+      "('sds', 'sds', 'e', 234455)\n",
+      "e\n",
+      "here\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [05/Jan/2020 00:35:02] \"POST /login HTTP/1.1\" 200 1528\n"
      ]
     }
    ],
@@ -72,6 +67,7 @@
     "c = conn.cursor()\n",
     "isLoggedIn = 0\n",
     "loginResult = None\n",
+    "topSalariesResult = None\n",
     "\n",
     "# Create table - Personnel\n",
     "query='''CREATE TABLE IF NOT EXISTS Personnel (\n",
@@ -214,7 +210,18 @@
     "    if (len(loginResult) > 0):\n",
     "        global isLoggedIn\n",
     "        isLoggedIn = 1\n",
-    "        return template('home',loggedUser=loginResult, msg='')\n",
+    "        if(loginResult[0][8]==\"e\"):\n",
+    "            #Getting top salaries by grouping SQL\n",
+    "            conn = create_connection()\n",
+    "            cur = conn.cursor()\n",
+    "            query = '''select name,surname, personnel_type, max(salary) as maxSalary from Personnel group by personnel_type'''\n",
+    "            cur.execute(query)\n",
+    "            global topSalariesResult\n",
+    "            topSalariesResult=cur.fetchall()\n",
+    "            conn.close()\n",
+    "            return template('home',loggedUser=loginResult, msg='You have the admin priviledges.',topSalaries=topSalariesResult)\n",
+    "        else:\n",
+    "            return template('home',loggedUser=loginResult, msg='')\n",
     "    else:\n",
     "        return template('index',msg=\"Wrong credentials.\")\n",
     "\n",
@@ -233,17 +240,10 @@
     "@route('/home/')\n",
     "def home(name=''):\n",
     "    if (isLoggedIn == 1):\n",
-    "        if(loggedUser[0][8]==\"e\"):\n",
-    "            \n",
-    "            #Getting top salaries by grouping SQL\n",
-    "            conn = create_connection()\n",
-    "            cur = conn.cursor()\n",
-    "            query = '''select name,surname, personnel_type, max(salary) as maxSalary from Personnel group by personnel_type;'''\n",
-    "            topSalariesQ=cur.fetchall()[0]\n",
-    "            \n",
-    "            \n",
-    "            return template('home',loggedUser=loginResult, topSalaries=topSalariesQ, msg='You have top level privilidges including to be able to see statistics below.')\n",
-    "        return template('home',loggedUser=loginResult, msg='')\n",
+    "        if(loginResult[0][8]==\"e\"):\n",
+    "            return template('home',loggedUser=loginResult, msg='You have the admin priviledges.',topSalaries=topSalariesResult)\n",
+    "        else:\n",
+    "            return template('home',loggedUser=loginResult, msg='')\n",
     "    else:\n",
     "        return template('index',msg=\"You must log in.\")\n",
     "    \n",
