display personnel page added

--- a/Python 2019-2020Z Polat Su.ipynb
+++ b/Python 2019-2020Z Polat Su.ipynb
@@ -36,24 +36,10 @@
       "Listening on http://localhost:8049/\n",
       "Hit Ctrl-C to quit.\n",
       "\n",
-      "127.0.0.1 - - [05/Jan/2020 00:35:00] \"GET / HTTP/1.1\" 200 747\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('ozlem', 'polat', 'a', 0)\n",
-      "('sds', 'sds', 'e', 234455)\n",
-      "e\n",
-      "here\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [05/Jan/2020 00:35:02] \"POST /login HTTP/1.1\" 200 1528\n"
+      "127.0.0.1 - - [05/Jan/2020 01:08:27] \"GET / HTTP/1.1\" 200 747\n",
+      "127.0.0.1 - - [05/Jan/2020 01:08:29] \"POST /login HTTP/1.1\" 200 996\n",
+      "127.0.0.1 - - [05/Jan/2020 01:08:31] \"GET /displayPersonnel HTTP/1.1\" 200 1115\n",
+      "127.0.0.1 - - [05/Jan/2020 01:08:33] \"POST /selectedPersonnel HTTP/1.1\" 200 1186\n"
      ]
     }
    ],
@@ -340,10 +326,36 @@
     "        conn.commit()\n",
     "        conn.close()\n",
     "        return template('index',msg=\"An error happened on adding new personnel.\")\n",
-    "    \n",
-    "    \n",
-    "   \n",
-    "   \n",
+    "\n",
+    "\n",
+    "@route('/displayPersonnel')\n",
+    "@route('/displayPersonnel/')\n",
+    "def addpersonnel():\n",
+    "    if (isLoggedIn == 1):\n",
+    "        return template('displayPersonnel', msg=\"\")\n",
+    "    else:\n",
+    "        return template('index',msg=\"You must log in.\")   \n",
+    "\n",
+    "@route('/selectedPersonnel')\n",
+    "@route('/selectedPersonnel/')\n",
+    "@route('/selectedPersonnel', method='POST')\n",
+    "def addpersonnelpost():\n",
+    "    #Establishing a new connection\n",
+    "    conn = create_connection()\n",
+    "    cur = conn.cursor()\n",
+    "    email = request.forms.get('email', default=False)\n",
+    "    query = '''select * from Personnel where email=?'''\n",
+    "    cur.execute(query,(email,))\n",
+    "    selectedPersonnel=cur.fetchall()\n",
+    "    if(len(selectedPersonnel)==1):\n",
+    "        #if selected personnel is an executive then it can only be displayed by another executive\n",
+    "        if (selectedPersonnel[0][8]==\"e\") and (loginResult[0][8]!=\"e\"):\n",
+    "            return template('displayPersonnel', msg=\"You do not have prividleges to display an Executive's information.\")\n",
+    "        else:\n",
+    "            return template('selectedPersonnel', msg=\"Success! Now route this page to selectedPersonnel\")\n",
+    "    else:\n",
+    "        return template('displayPersonnel', msg=\"Personnel not found under this e-mail\")\n",
+    "\n",
     "\n",
     "run(host='localhost', port=8049)\n",
     "\n",
