--- a/Python 2019-2020Z Polat Su.ipynb
+++ b/Python 2019-2020Z Polat Su.ipynb
@@ -36,10 +36,14 @@
       "Listening on http://localhost:8049/\n",
       "Hit Ctrl-C to quit.\n",
       "\n",
-      "127.0.0.1 - - [05/Jan/2020 01:08:27] \"GET / HTTP/1.1\" 200 747\n",
-      "127.0.0.1 - - [05/Jan/2020 01:08:29] \"POST /login HTTP/1.1\" 200 996\n",
-      "127.0.0.1 - - [05/Jan/2020 01:08:31] \"GET /displayPersonnel HTTP/1.1\" 200 1115\n",
-      "127.0.0.1 - - [05/Jan/2020 01:08:33] \"POST /selectedPersonnel HTTP/1.1\" 200 1186\n"
+      "127.0.0.1 - - [05/Jan/2020 12:23:38] \"GET / HTTP/1.1\" 200 747\n",
+      "127.0.0.1 - - [05/Jan/2020 12:23:41] \"POST /login HTTP/1.1\" 200 996\n",
+      "127.0.0.1 - - [05/Jan/2020 12:23:42] \"GET /addPersonnel HTTP/1.1\" 200 6348\n",
+      "127.0.0.1 - - [05/Jan/2020 12:24:03] \"POST /addPersonnelPost HTTP/1.1\" 200 1025\n",
+      "127.0.0.1 - - [05/Jan/2020 12:24:15] \"GET /logout HTTP/1.1\" 200 765\n",
+      "127.0.0.1 - - [05/Jan/2020 12:24:17] \"POST /login HTTP/1.1\" 200 1558\n",
+      "127.0.0.1 - - [05/Jan/2020 12:24:32] \"GET /logout HTTP/1.1\" 200 765\n",
+      "127.0.0.1 - - [05/Jan/2020 12:24:35] \"POST /login HTTP/1.1\" 200 996\n"
      ]
     }
    ],
@@ -65,7 +69,8 @@
     "                        salary INTEGER, \n",
     "                        job_start_date datetime,\n",
     "                        password char(20) NOT NULL,\n",
-    "                        personnel_type char(1) NOT NULL);'''\n",
+    "                        personnel_type char(1) NOT NULL,\n",
+    "                        rank INTEGER);'''\n",
     "\n",
     "c.execute(query)\n",
     "\n",
@@ -106,7 +111,7 @@
     "#Add an admin account\n",
     "\n",
     "query = '''INSERT INTO Personnel(pID,name,surname,email,password,personnel_type) \n",
-    "            SELECT 000, 'Global','Admin','admin','admin','a' \n",
+    "            SELECT 000, 'Global','Admin','admin','admin','e' \n",
     "            WHERE NOT EXISTS(SELECT 1 FROM Personnel WHERE pID = 000)'''\n",
     "\n",
     "c.execute(query)\n",
@@ -272,6 +277,7 @@
     "    jobStartDate = request.forms.get('jobStartDate', default=False)\n",
     "    password = request.forms.get('password', default=False)\n",
     "    personnelType = request.forms.get('personnelType', default=False)\n",
+    "    rank = request.forms.get('rank', default=False)\n",
     "    \n",
     "    query = '''select count(*) from Personnel where email=?'''\n",
     "    cur.execute(query,(email,))\n",
@@ -281,12 +287,24 @@
     "        return template('addPersonnel', zipList=zipCodes, msg=\"A record exists under this e-mail\")\n",
     "    \n",
     "    if personnelType in (\"a\",\"e\",\"f\"):\n",
+    "        #If personnel type is selected which is a required field on HTML then start instering values\n",
     "        query = '''INSERT INTO Personnel\n",
-    "                    VALUES (?,?,?,?,?,?,?,?,?)'''\n",
-    "        cur.execute(query,(pid,name,surname,email,zipCode,salary,jobStartDate,password,personnelType))\n",
+    "                    VALUES (?,?,?,?,?,?,?,?,?,?)'''\n",
+    "        cur.execute(query,(pid,name,surname,email,zipCode,salary,jobStartDate,password,personnelType,rank))\n",
     "    \n",
-    "    \n",
-    "    \n",
+    "        # Create table for this specific personnel- RankSalaryID\n",
+    "        rankSalaryTableName=\"RankSalary\"+str(pid)\n",
+    "        query='''CREATE TABLE IF NOT EXISTS {0} (\n",
+    "                                rank INTEGER,\n",
+    "                                salary INTEGER);'''.format(rankSalaryTableName)\n",
+    "        cur.execute(query)\n",
+    "        \n",
+    "        # Add values to that table\n",
+    "        query = '''INSERT INTO {0}\n",
+    "                    VALUES (?,?)'''.format(rankSalaryTableName)\n",
+    "        cur.execute(query,(rank,salary))\n",
+    "        \n",
+    "        #If the personnel type is administrative then expense and private healt insurance information should be added\n",
     "        if(personnelType==\"a\"):\n",
     "            expense = request.forms.get('expense', default=False)\n",
     "            privateHealthInsurance = request.forms.get('privateHealthInsurance', default=False)\n",
@@ -298,7 +316,7 @@
     "            conn.close()\n",
     "            return template('home',loggedUser=loginResult, msg=\"Personnel added successfully.\") \n",
     "        \n",
-    "        \n",
+    "        #If the personnel type is executive then premium ratio information should be added\n",
     "        if(personnelType==\"e\"):\n",
     "            premiumRatio = request.forms.get('premiumRatio', default=False)\n",
     "\n",
@@ -309,7 +327,7 @@
     "            conn.close()\n",
     "            return template('home',loggedUser=loginResult, msg=\"Personnel added successfully.\")\n",
     "        \n",
-    "        \n",
+    "        #If the personnel type is field then yearly bonus and shift type information should be added\n",
     "        if(personnelType==\"f\"):\n",
     "            yearlyBonus = request.forms.get('yearlyBonus', default=False)\n",
     "            shiftType = request.forms.get('shiftType', default=False)\n",
