--- a/Python 2019-2020Z Polat Su.ipynb
+++ b/Python 2019-2020Z Polat Su.ipynb
@@ -27,7 +27,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bottle v0.11.6 server starting up (using WSGIRefServer())...\n",
+      "Listening on http://localhost:8049/\n",
+      "Hit Ctrl-C to quit.\n",
+      "\n",
+      "127.0.0.1 - - [05/Jan/2020 13:12:37] \"GET / HTTP/1.1\" 200 747\n",
+      "127.0.0.1 - - [05/Jan/2020 13:12:41] \"POST /login HTTP/1.1\" 200 1558\n",
+      "127.0.0.1 - - [05/Jan/2020 13:12:43] \"GET /displayPersonnel HTTP/1.1\" 200 1115\n",
+      "127.0.0.1 - - [05/Jan/2020 13:12:45] \"POST /selectedPersonnel HTTP/1.1\" 200 8972\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "import time\n",
